fix: tighten crawler, RBAC, data scope and dashboard access